# ESI-Proj

./: CMakeLists.txt  gui.glade  main.cpp
Gtk/: DirBox.cpp  DirBox.h  DirWindow.cpp  DirWindow.h
Utils/: DirectoryEntry.cpp  DirectoryEntry.h  DirectoryManager.cpp  DirectoryManager.h
